-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.7.0
-
None
-
Windows 10, Qt Creator 4.0.3, Qt 5.7
-
244356ba182c2807ef9b15eb71ac16a568d65642
I don't know, may be its not a bug, but I want to put Drawer a litle bit below, for example below menuBar
As I know, Drawer inherits Popup, and there is no problem with Popup to set "y", "x" parametrs, so why Drawer ignores?
import QtQuick 2.7 import QtQuick.Window 2.0 import QtQuick.Controls 2.0 ApplicationWindow { title: qsTr("Hello World") width: 480 height: 800 visible: true Drawer { id: drawer height: parent.height - 100 width: parent.width * 0.7 y: 100 Component.onCompleted: console.log("drawer: ", x, y); } Button { text: "date picker" y: 100 onClicked: drawer.open() Component.onCompleted: console.log("button: ", x, y); } }
Here are console output after application started
qml: button: 0 100 qml: drawer: 0 0
PS: topMargin, topPadding also ignored, so I don't know how to put lower